# saas_survey

./: .env.example  .gitignore  API_TESTING_GUIDE.md  CLAUDE.md  Dockerfile  PROJECT_STATUS.md  README.md  app.py  config.py  create_admin.py  database_diagram.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run.py  run_tests.py  test_api.py
.claude/: CLAUDE.md  settings.local.json
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/api/: auth.py  auth_refactored.py  dependencies.py  export.py  forms.py  responses.py  survey_responses.py  surveys.py  surveys_refactored.py  users.py
app/core/: config.py  security.py  startup.py
app/models/: __init__.py  form.py  user.py
app/repositories/: __init__.py  base_repository.py  response_repository.py  survey_repository.py  user_repository.py
app/schemas/: form.py  user.py
app/services/: __init__.py  auth_service.py  export_service.py  response_service.py  survey_service.py
application/: response_service.py  survey_service.py
data/: questions.csv  responses.csv  surveys.csv
docs/: (공유용) 학교법인 가톨릭학원 설문조사 시스템_관리자매뉴얼.docx  CLI_USAGE.md  ~$유용) 학교법인 가톨릭학원 설문조사 시스템_관리자매뉴얼.docx  외래설문조사 설계.pptx  입원설문조사 설계.pptx
domain/entities/: question.py  response.py  survey.py
domain/repositories/: response_repository.py  survey_repository.py
domain/value_objects/: types.py
frontend/.next/: trace
infrastructure/persistence/: csv_response_repository.py  csv_survey_repository.py
interface/api/: dependencies.py  main.py
tests/: README.md  conftest.py  test_scenarios.py
(+12 files in other folders)
